--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,13 @@ under the License.
     <parent>
         <groupId>org.apache.flink</groupId>
         <artifactId>flink-parent</artifactId>
-        <version>1.1.2</version>
+        <version>1.4-SNAPSHOT</version>
     </parent>
 
     <groupId>com.github.haoch</groupId>
     <artifactId>flink-siddhi_2.10</artifactId>
     <name>flink-siddhi</name>
-    <version>1.2-SNAPSHOT</version>
+    <version>${parent.version}</version>
 
     <packaging>jar</packaging>
 
