--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ under the License.
     </parent>
 
     <groupId>com.github.haoch</groupId>
-    <artifactId>flink-siddhi_${scala.version}</artifactId>
+    <artifactId>flink-siddhi_${scala.binary.version}</artifactId>
     <name>flink-siddhi</name>
     <version>${project.parent.version}</version>
 
@@ -37,7 +37,7 @@ under the License.
 
     <properties>
         <siddhi.version>3.0.5</siddhi.version>
-        <scala.version>2.11</scala.version>
+        <scala.binary.version>2.11</scala.binary.version>
     </properties>
 
     <dependencies>
@@ -72,7 +72,7 @@ under the License.
         <!-- Core streaming API -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java_${scala.version}</artifactId>
+            <artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -80,7 +80,7 @@ under the License.
         <!-- test dependencies -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-runtime_${scala.version}</artifactId>
+            <artifactId>flink-runtime_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
@@ -93,7 +93,7 @@ under the License.
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-test-utils_${scala.version}</artifactId>
+            <artifactId>flink-test-utils_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
             <exclusions>
@@ -105,7 +105,7 @@ under the License.
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-scala_${scala.version}</artifactId>
+            <artifactId>flink-scala_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
             <exclusions>
                 <exclusion>  <!-- declare the exclusion here -->
@@ -158,7 +158,7 @@ under the License.
                 </property>
             </activation>
             <properties>
-                <scala.version>2.10</scala.version>
+                <scala.binary.version>2.10</scala.binary.version>
             </properties>
         </profile>
     </profiles>
