--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@ under the License.
     <packaging>jar</packaging>
 
     <properties>
-        <siddhi.version>3.0.5</siddhi.version>
+        <siddhi.version>4.0.0-M51</siddhi.version>
         <scala.binary.version>2.11</scala.binary.version>
     </properties>
 
@@ -53,6 +53,12 @@ under the License.
                     <artifactId>apacheds-jdbm1</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.wso2.siddhi</groupId>
+            <artifactId>siddhi-annotations</artifactId>
+            <version>${siddhi.version}</version>
         </dependency>
 
         <!-- Together with the dependency management section in flink-parent, this
@@ -75,6 +81,13 @@ under the License.
             <artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Reflection dependency -->
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <!-- test dependencies -->
@@ -113,6 +126,12 @@ under the License.
                     <artifactId>apacheds-jdbm1</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.extension.siddhi.execution.string</groupId>
+            <artifactId>siddhi-execution-string</artifactId>
+            <version>4.0.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
